LOOK-220 added 3 types of load to stage

--- a/yml/product_office_qty.yml
+++ b/yml/product_office_qty.yml
@@ -1,40 +1,40 @@
 database: dev
 schema: public
 table: product_office_qty
-load_type: increment
-increment_column: created_at
-pk: id
+load_type: full
+increment_column: 
+pk: poq_id
 source:
   schema: public
-  table: warehouse_order_logs
+  table: product_office_qty
 target:
   schema: mock
-  table: warehouse_order_logs
+  table: product_office_qty
 map:
   -
-    source: id
-    target: id
+    source: poq_id
+    target: poq_id
   -
-    source: order_id
-    target: order_id
+    source: poq_prod_id
+    target: poq_prod_id
   -
-    source: "type"
-    target: "type"
+    source: poq_office_id
+    target: poq_office_id
   -
-    source: sf_guard_user_id
-    target: sf_guard_user_id
+    source: poq_qty
+    target: poq_qty
   -
-    source: sf_guard_user_name
-    target: sf_guard_user_name
+    source: poq_item_type
+    target: poq_item_type
   -
-    source: order_courier_register_id
-    target: order_courier_register_id
+    source: sync_created_at
+    target: sync_created_at
   -
-    source: created_at
-    target: created_at
+    source: sync_updated_at
+    target: sync_updated_at
   -
-    source: register_id
-    target: register_id
+    source: reserved_qty
+    target: reserved_qty
   -
-    source: application
-    target: application
+    source: paused_qty
+    target: paused_qty
