LOOK-220 added yml files and updated stg_load func

--- a/yml/product_office_qty.yml
+++ b/yml/product_office_qty.yml
@@ -3,7 +3,7 @@ schema: public
 table: product_office_qty
 load_type: full
 increment_column: 
-pk: poq_id
+pk: ['poq_id']
 source:
   schema: public
   table: product_office_qty
