--- a/yml/_sample.yml
+++ b/yml/_sample.yml
@@ -1,9 +1,9 @@
 database: dev
 schema: mock
 table: sf_guard_user_group
-load_type: increment_with_delete
+load_type: increment_with_delete # avaible types: full, increment, increment_with_delete
 increment_column: updated_at
-pk: ['user_id', 'group_id']
+pk: ['user_id', 'group_id'] # dict of keys for where condition when using increment types.
 map:
   -
     source: user_id
