--- a/yml/_sample.yml
+++ b/yml/_sample.yml
@@ -1,10 +1,10 @@
 database: dev
-schema: mock
-table: sf_guard_user_group
+schema: mock # target database schema
+table: sf_guard_user_group # table name. equal for source & target
 load_type: increment_with_delete # avaible types: full, increment, increment_with_delete
-increment_column: updated_at
+increment_column: updated_at # datetime column used for incremnet load
 pk: ['user_id', 'group_id'] # dict of keys for where condition when using increment types.
-map:
+map: # enter all column names in order that have been added to sql select & insert queryes
   -
     source: user_id
   -
