--- a/yml/product_vendors.yml
+++ b/yml/product_vendors.yml
@@ -1,5 +1,5 @@
 database: dev
-schema: mock
+schema: staging
 table: product_vendors
 load_type: increment_with_delete
 increment_column: updated_at
