--- a/yml/service_history.yml
+++ b/yml/service_history.yml
@@ -1,5 +1,5 @@
 database: dev
-schema: mock
+schema: staging
 table: service_history
 load_type: increment_with_delete
 increment_column: updated_at
