--- a/yml/warehouse_order_items.yml
+++ b/yml/warehouse_order_items.yml
@@ -1,5 +1,5 @@
 database: dev
-schema: mock
+schema: staging
 table: warehouse_order_items
 load_type: increment_with_delete
 increment_column: updated_at
