--- a/yml/sf_guard_user_permission.yml
+++ b/yml/sf_guard_user_permission.yml
@@ -1,7 +1,7 @@
 database: dev
 schema: staging
 table: sf_guard_user_permission
-load_type: increment_with_delete
+load_type: full
 increment_column: updated_at
 pk: ['user_id', 'permission_id']
 map:
