--- a/yml/warehouse_order_items.yml
+++ b/yml/warehouse_order_items.yml
@@ -2,8 +2,19 @@ database: dev
 schema: staging
 table: warehouse_order_items
 load_type: increment_with_delete
-increment_column: updated_at
+increment_column: confirmed_at
 pk: ['id']
+custom_query: CREATE temporary TABLE {table}_{comp_id}_temp as
+              SELECT {table}.*, warehouse_orders.confirmed_at
+              FROM {ext_schema}.{table}
+              INNER JOIN {ext_schema}.warehouse_orders
+              ON {table}.order_id = warehouse_orders.id
+              WHERE warehouse_orders.{increment} > (
+                  SELECT coalesce(max({increment}), '1970-01-01 00:00:00'::timestamp)
+                  FROM {target_schema}.warehouse_order_items
+                  WHERE comp_id = {comp_id}
+              ) and warehouse_orders.{increment} < CURRENT_DATE + interval '8 hours'
+                  and warehouse_orders.{increment} IS NOT NULL
 map:
   -
     source: id
